# lvgl_esp32_drivers_stripped_down

./: CMakeLists.txt  Kconfig  lvgl_helpers.c  lvgl_helpers.h
lvgl_tft/: esp_lcd_backlight.c  ili9163c.c
